--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "server": "cd server && npm run dev",
     "client": "cd client && npm run dev",
     "install-all": "cd client && npm install && cd ../server && npm install",
-    "build": "cd client && npm install && npm run build && cd ../server && npm install"
+    "build": "cd client && npm install --include=dev && npm run build && cd ../server && npm install"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
