Fixed issue with slayer log and added an admin backend with users having the ability to report issues

--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
+  },
+  "dependencies": {
+    "express": "^5.2.1",
+    "sequelize": "^6.37.7"
   }
 }
